tests/unit-fail-compilation/j078k.c
int main(void) {
      _Thread_local int x;
      return 0;
}
